# FileConverter

./: CMakeLists.txt  README.md  converter.cpp  converter.h  extension.h  inputHandler.cpp  inputHandler.h  main.cpp  mesh.cpp  mesh.h  part.cpp  part.h  stepConverter.cpp  stepConverter.h  stepReader.cpp  stepReader.h  stepWriter.cpp  stepWriter.h  stlConverter.cpp  stlConverter.h  stlReader.cpp  stlReader.h  stlWriter.cpp  stlWriter.h
